Campaign - GA, meta, og, loading

--- a/app/views/greetings/campaign.html.erb
+++ b/app/views/greetings/campaign.html.erb
@@ -1,10 +1,20 @@
 <!DOCTYPE html>
 <html>
   <head>
+
+    <title>Daydash “Dash Your Day” - ได้เวลาเปิดใจ ทดลองทำกิจกรรมใหม่ๆ </title>
+
+    <link rel="icon" href="/favicon-194x194.png?v=1.0">
+
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>Daydash</title>
+    <meta name="description" content="เพราะเชื่อว่า การได้ทดลองทำกิจกรรมใหม่ๆ เป็นการเปิดโลกของเราให้กว้างขึ้น Daydash จึงเลือก 3 กิจกรรมเด็ด มาให้คุณได้ทดลองกันฟรีๆ ด้วย 3 ขั้นตอนง่ายๆ เพียงเลือกกิจกรรมที่อยากทำ กรอกข้อมูล และแชร์ให้เพื่อน เท่านี้คุณก็มีสิทธิ์ลุ้นเป็นผู้โชคดี ได้ทดลองทำกิจกรรมสนุกๆ กับ Daydash ฟรี!">
+    <meta property="og:title"              content="เวิร์คช็อปทำลูกชุบชิคๆ + ปีนหน้าผาจำลอง + เล่นเลเซอร์เกม ชอบแนวไหน เลือกเลย!" />
+    <meta property="og:description"        content="ร่วมสนุกได้ง่ายๆ เพียงเลือกกิจกรรมที่อยากทำ กรอกข้อมูล และแชร์ให้เพื่อน เท่านี้ก็มีสิทธิ์ลุ้นเป็นผู้โชคดี ได้ทดลองทำกิจกรรมสนุกๆ กับ Daydash ฟรี!" />
+    <meta property="og:image"              content="<%= "#{App.domain}/src/images/content/campaign/fb-og.jpg" %>" />
+
+
 
     <link rel="stylesheet" href="/src/packages/font-awesome-4.5.0/css/font-awesome.min.css" />
 
@@ -14,6 +24,7 @@
 
     <script src="/src/packages/jquery/jquery-2.2.2.min.js"></script>
     <script src="/src/packages/bootstrap-3.3.6/js/bootstrap.min.js"></script>
+
 
   </head>
   <body id="campaign-page">
@@ -58,7 +69,7 @@
               </div>
               <div class="col-xs-12 col-sm-6 col-md-4">
                 <div class="event">
-                  <div class="cover" style="background-image: url(/src/images/content/campaign/rock-domain.png);"></div>
+                  <div class="cover" style="background-image: url(/src/images/content/campaign/rock-domain.jpg);"></div>
                   <div class="info">
                     <h4>Rock Climbing 1 Day Pass</h4>
                     <div>2 รางวัล รางวัลละ 2 ท่าน</div>
@@ -135,12 +146,6 @@
     hd.appendChild(js);
   }(document, "script", "vrlps-js", "xXx5R50mptUkMKKJ75wqzuQAn6I"));
 </script>
-<script>
-  window.addEventListener('vl_ready', function(e) {
-    VL.openModal();
-  }, false)
-</script>
-
 
   <% elsif @selected_campaign == 'rock-domain' %>
 <script>
@@ -154,11 +159,8 @@
     hd.appendChild(js);
   }(document, "script", "vrlps-js", "BAYBdxcQ9j8fBd7tDJM3l2FGlgo"));
 </script>
-<script>
-  window.addEventListener('vl_ready', function(e) {
-    VL.openModal();
-  }, false)
-</script>
+
+
   <% elsif @selected_campaign == 'olive' %>
 <script>
   (function(d, s, id, ucid) {
@@ -171,11 +173,31 @@
     hd.appendChild(js);
   }(document, "script", "vrlps-js", "qoSau3hvJnZB2UqmvfhyOHhLa1U"));
 </script>
+  <% end %>
+
+<% if @selected_campaign != '' %>
+<div id="loading">
+  <img src="/src/images/content/campaign/loading.gif" width="100" />
+</div>
+
 <script>
   window.addEventListener('vl_ready', function(e) {
+    $('#loading').hide('fast');
     VL.openModal();
   }, false)
 </script>
-  <% end %>
+<% end %>
+
+
+<!-- Google Analytics -->
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-82041608-2', 'auto');
+  ga('send', 'pageview');
+</script>
 </body>
 </html>
