Campaign - Update design, content

--- a/app/views/greetings/campaign.html.erb
+++ b/app/views/greetings/campaign.html.erb
@@ -42,10 +42,7 @@
                 </h1>
 
                 <p class="section-description">
-                  เพราะเราเชื่อว่า การได้ทดลองทำกิจกรรมใหม่ๆ เป็นการเปิดโลกของเราให้กว้างขึ้น Daydash จึงเลือก 4 กิจกรรมเด็ด 
-                  มาให้คุณได้ทดลองกันฟรีๆ ด้วย 3 ขั้นตอนง่ายๆ 1. เลือกกิจกรรมที่อยากทำ 2. กรอกชื่ออีเมล 3. แชร์ให้เพื่อน 
-                  เพียงแค่นี้ คุณก็มีสิทธิ์ลุ้นเป็นผู้โชคดี ได้ทำกิจกรรมสนุกๆ ฟรีๆ ด่วน วันนี้ - 30 สิงหาคม นี้!                
-                </p>
+                  เพราะเชื่อว่า การได้ทดลองทำกิจกรรมใหม่ๆ เป็นการเปิดโลกของเราให้กว้างขึ้น Daydash จึงเลือก 3 กิจกรรมเด็ด มาให้คุณได้ทดลองกันฟรีๆ ด้วย 3 ขั้นตอนง่ายๆ เพียงเลือกกิจกรรมที่อยากทำ กรอกข้อมูล และแชร์ให้เพื่อน เท่านี้คุณก็มีสิทธิ์ลุ้นเป็นผู้โชคดี ได้ทดลองทำกิจกรรมสนุกๆ กับ Daydash ฟรี! วันนี้ - 31 สิงหาคม นี้!                </p>
               </div>
             </div>
           </div>
@@ -118,7 +115,7 @@
         <ul class="list-inline" id="social-list">
           <li><a target="_blank" href="https://www.facebook.com/daydashapp/"><i class="icon icon-facebook"></i></a></li>
           <li><a target="_blank" href="https://www.instagram.com/daydashapp"><i class="icon icon-instagram"></i></a></li>
-          <li><a target="_blank" href="#"><i class="icon icon-line"></i></a></li>
+          <li><a target="_blank" href="http://line.me/ti/p/%40daydash"><i class="icon icon-line"></i></a></li>
         </ul>
       </div>
     </div>
