--- a/public/src/packages/daydash/campaign.css
+++ b/public/src/packages/daydash/campaign.css
@@ -90,7 +90,9 @@
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
-    background-color: #ccc; }
+    background-color: #ccc;
+    border-radius: 5px;
+    transition: all 0.3s; }
   #campaign-page #event-section .section-body .event .info {
     position: absolute;
     height: auto;
@@ -110,6 +112,9 @@
       margin-bottom: 2px; }
     #campaign-page #event-section .section-body .event .info .btn {
       margin-top: 10px; }
+  #campaign-page #event-section .section-body .event:hover .cover {
+    -webkit-filter: brightness(80%);
+    filter: brightness(80%); }
 #campaign-page #event-section .section-footer {
   padding-bottom: 30px;
   font-family: "Athiti", "Helvetica Neue", "sans-serif";
@@ -174,9 +179,15 @@
 #campaign-page .btn-green {
   background: linear-gradient(to right, #00CFD1, #00E9CA);
   color: white; }
+  #campaign-page .btn-green:hover {
+    background: linear-gradient(45deg, #DF1E68, #DD2993); }
 @media (max-width: 991px) {
-  #campaign-page #intro-section .section-title br {
-    display: none; }
+  #campaign-page #intro-section .section-title {
+    font-size: 30px; }
+    #campaign-page #intro-section .section-title br {
+      display: none; }
+  #campaign-page #intro-section .section-description {
+    font-size: 16px; }
   #campaign-page #footer-section .sponser-list li {
     padding: 0px 15px; }
     #campaign-page #footer-section .sponser-list li a img {
