Campaign - update design, content

--- a/app/views/greetings/campaign.html.erb
+++ b/app/views/greetings/campaign.html.erb
@@ -35,7 +35,7 @@
           <div class="container container-sm">
             <div class="row">
               <div class="col-xs-12">
-                <img src="/src/images/theme/logo.png" height="60" />
+                <a href="/campaign/dash-your-day"><img src="/src/images/theme/logo.png" height="60" /></a>
 
                 <h1 class="section-title">
                   Get a chance to win 1 of <br />these activities, FREE!
