--- a/app/views/greetings/campaign_terms.html.erb
+++ b/app/views/greetings/campaign_terms.html.erb
@@ -73,9 +73,9 @@
           </div>
         </div>
         <ul class="list-inline" id="social-list">
-          <li><a href="#"><i class="icon icon-facebook"></i></a></li>
-          <li><a href="#"><i class="icon icon-instagram"></i></a></li>
-          <li><a href="#"><i class="icon icon-line"></i></a></li>
+          <li><a target="_blank" href="https://www.facebook.com/daydashapp/"><i class="icon icon-facebook"></i></a></li>
+          <li><a target="_blank" href="https://www.instagram.com/daydashapp"><i class="icon icon-instagram"></i></a></li>
+          <li><a target="_blank" href="http://line.me/ti/p/%40daydash"><i class="icon icon-line"></i></a></li>
         </ul>
       </div>
     </div>
