Campaign - update design

--- a/public/src/packages/daydash/sass/campaign.scss
+++ b/public/src/packages/daydash/sass/campaign.scss
@@ -28,7 +28,7 @@ $font-athiti: "Athiti", "Helvetica Neue", "sans-serif";
 		background-size: cover;
 		background-position: center;
 		background-repeat: no-repeat;
-		background-attachement: fixed;
+		background-attachment: fixed;
 	}
 
 	#intro-section {
