--- a/public/src/packages/daydash/campaign.css
+++ b/public/src/packages/daydash/campaign.css
@@ -57,7 +57,7 @@
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
-  background-attachement: fixed; }
+  background-attachment: fixed; }
 #campaign-page #intro-section {
   padding-bottom: 30px;
   text-align: center; }
