--- a/app/views/greetings/campaign_terms.html.erb
+++ b/app/views/greetings/campaign_terms.html.erb
@@ -34,32 +34,32 @@
           <div class="container">
             <h2>เงื่อนไขการร่วมกิจกรรม “Dash Your Day” ได้เวลาเติมประสบการณ์ใหม่ๆ ให้ชีวิต โดย Daydash.co</h2>
             <ul>
-              <li>เปิดให้ร่วมสนุกตั้งแต่วันที่ 19 - 31 สิงหาคม 2016</li>
+              <li>เปิดให้ร่วมสนุกตั้งแต่วันที่ 19 - 31 สิงหาคม 2016 </li>
               <li>หมดเวลาเข้าร่วมสนุกเวลา 24.00 น. ของวันที่ 31 สิงหาคม 2016 ตามเวลาในประเทศไทย</li>
-              <li>ประกาศผลรางวัลในวันที่ 5 กันยายน 2016 ทาง Daydash Facebook Page</li>
+              <li>ประกาศผลรางวัลในวันที่ 5 กันยายน 2016 ทาง <a href="https://www.facebook.com/daydashapp/" target="_blank">Daydash Facebook Page</a></li>
             </ul>
 
             <h2>รายละเอียดของรางวัล</h2>
 
-            <h4>เวิร์คช็อปทำลูกชุบ โดย Olive Creative Lab :</h4>
+            <h4>เวิร์คช็อปทำลูกชุบ โดย <a href="https://www.facebook.com/olivecreativelab" target="_blank">Olive Creative Lab</a> :</h4>
             <ul>
               <li>1 รางวัล รางวัลละ 1 ท่าน มูลค่า 1,800 บาท</li>
               <li>รางวัลได้รวมอุปกรณ์ทุกอย่างเรียบร้อยแล้ว</li>
-              <li>กิจกรรมจะมีในวันที่ 24 กันยายน เวลา 14:00-16:00 น. หากคุณไม่สามารถเข้าร่วมในวันเวลาเวลาดังกล่าวได้ กรุณาร่วมสนุกเพื่อลุ้นรับของรางวัลอื่นแทน</li>
+              <li>เวิร์คช็อปจะจัดขึ้นในวันที่ 24 กันยายน เวลา 14:00-16:00 น. ณ Olive Creative Lab (เอกมัยซอย 10) หากคุณไม่สามารถเข้าร่วมในวันเวลาเวลาดังกล่าวได้ กรุณาร่วมสนุกเพื่อลุ้นรับของรางวัลอื่นแทน</li>
             </ul>
 
-            <h4>เลเซอร์เกม โดย Lazgam :</h4>
+            <h4>เลเซอร์เกม โดย <a href="http://www.lazgam.com/" target="_blank">Lazgam</a> :</h4>
             <ul>
               <li>10 รางวัล รางวัลละ 2 ท่าน มูลค่า 700 บาท</li>
-              <li>ผู้ได้รับรางวัลจะต้องลงทะเบียนเพื่อจองวันและเวลาที่ท่านต้องการเล่นล่วงหน้าที่ Lazgam</li>
+              <li>ผู้ได้รับรางวัลจะต้องลงทะเบียนเพื่อจองวันและเวลาที่ท่านต้องการเล่นล่วงหน้าที่ <a href="https://www-34p.bookeo.com/bookeo/b_lazgamlasergames_start.html?ctlsrc=1471629614096&src=02r">Lazgam Booking</a> หากไม่จองล่วงหน้า ทางทีมงานจะไม่สามารถรับประกันได้ว่าคุณจะได้เล่นเกมตามวันและเวลาที่ต้องการหรือไม่่</li>
               <li>หมดเขตใช้สิทธิ์ วันที่ 30 กันยายน 2016</li>
             </ul>
 
-            <h4>Rock Climbing 1 Day Pass โดย Rock Domain Climbing Gym :</h4>
+            <h4>Rock Climbing 1 Day Pass โดย <a href="http://www.rockdomaingym.com/" target="_blank">Rock Domain Climbing Gym</a> :</h4>
             <ul>
               <li>2 รางวัล รางวัลละ 2 ท่าน มูลค่า 900 บาท</li>
               <li>รางวัลนี้ไม่รวมค่าเช่าอุปกรณ์ต่างๆ</li>
-              <li>หมดเขตใช้สิทธิ์ วันที่ 30 กันยายน 2016</li> 
+              <li>หมดเขตใช้สิทธิ์ วันที่ 30 กันยายน 2016</li>
             </ul>
 
             <h2>เงื่อนไขในการรับของรางวัล</h2>
