--- a/app/views/organizer/events/new.html.erb
+++ b/app/views/organizer/events/new.html.erb
@@ -33,21 +33,26 @@
               <textarea class="form-control" name="description" rows="10"></textarea>
             </div>
             <div class="form-group">
+              <label>Location</label>
+              <input class="form-control" name="location_name" value="" placeholder="eg. Hubba Thailand, Ekamai soi 4" />
+            </div>
+            <div class="form-group">
               <label>Address</label>
-              <input class="form-control" name="address" value="" placeholder="eg. Hubba Thailand, Ekamai soi 4" />
+              <input class="form-control" name="location_address" value="" placeholder="eg. Hubba Thailand, Ekamai soi 4" />
             </div>
             <div class="form-group">
               <label>Location on Map</label>
               <div class="form-inline">
-                <input class="form-control" type="text" name="lat" id="event_latitude" value="" placeholder="Latitude" />
-                <input class="form-control" type="text" name="lng" id="event_longitude" value="" placeholder="Longitude" />
+                <input class="form-control" type="text" name="latitude" id="event_latitude" value="" placeholder="Latitude" />
+                <input class="form-control" type="text" name="longitude" id="event_longitude" value="" placeholder="Longitude" />
               </div>
+              <input id="pac-input" class="controls" type="text" placeholder="Search Box">
               <div id="map" style="margin-top: 15px; height: 300px;"></div>
             </div>
           </div>
           <div class="col-xs-12 col-md-6">
             <div class="form-group">
-              <label>Galleries</label>
+              <label>Images</label>
               <input class="form-control" type="file" name="galleries[]" multiple />
             </div>
           </div>
