--- a/app/views/client/events/index.html.erb
+++ b/app/views/client/events/index.html.erb
@@ -35,7 +35,7 @@
             <div class="cover" style="background-image: url(<%= event.get_thumbnail %>);"></div>
             <div class="info">
               <h4 class="title text-left"><%= event.title %></h4>
-              <div class="meta date"><i class="icon icon-xs icon-calendar"></i> <%= event.first_section.to_event_human %></div>
+              <div class="meta date"><i class="icon icon-xs icon-calendar"></i> <%= event.to_up_time %></div>
               <div class="meta location"><i class="icon icon-xs icon-map-pin"></i> <%= event.location_name %></div>
             </div>
           </a>
