term policy html

--- a/app/views/greetings/policy.html.erb
+++ b/app/views/greetings/policy.html.erb
@@ -1,32 +1,38 @@
-<h1>นโยบายความเป็นส่วนตัวของ Daydash</h1>
-<p>แอพพลิเคชั่น Daydash (ทั้งทางเว็บไซต์ และผ่านทาง mobile) ตระหนักถึงความปลอดภัยของข้อมูลส่วนบุคคลและจะรักษาข้อมูลที่ได้รับจากท่านไว้อย่างเป็นความลับและ ปลอดภัยโดยใช้นโยบายความเป็นส่วนตัวเพื่อป้องกันความเสียหายที่อาจเกิดขึ้นกับท่าน บริษัทจึงมีนโยบายความเป็นส่วนตัวเพื่อป้องกันความปลอดภัยของข้อมูลส่วนตัวของท่านดังนี้</p>
+<div class="container">
+  <div class="row">
+    <div class="col-sm-12">
+      <h1>นโยบายความเป็นส่วนตัวของ Daydash</h1>
+      <p>แอพพลิเคชั่น Daydash (ทั้งทางเว็บไซต์ และผ่านทาง mobile) ตระหนักถึงความปลอดภัยของข้อมูลส่วนบุคคลและจะรักษาข้อมูลที่ได้รับจากท่านไว้อย่างเป็นความลับและ ปลอดภัยโดยใช้นโยบายความเป็นส่วนตัวเพื่อป้องกันความเสียหายที่อาจเกิดขึ้นกับท่าน บริษัทจึงมีนโยบายความเป็นส่วนตัวเพื่อป้องกันความปลอดภัยของข้อมูลส่วนตัวของท่านดังนี้</p>
 
-<h2>การเก็บข้อมูลและการใช้ข้อมูลส่วนบุคคล</h2>
-<p>เมื่อท่านใช้บริการผ่านทางแอพพลิเคชั่น Daydash และลงทะเบียนบัญชีผู้ใช้ ท่านจะต้องให้ข้อมูลส่วนตัวกับทางแอพพลิเคชั่น เช่น ชื่อ ที่อยู่ อีเมล์ เบอร์โทรศัพท์ ข้อมูลบัญชีธนาคาร ข้อมูลบัตรเครดิต รวมถึงข้อมูลลักษณะการใช้งานแอพพลิเคชั่น เป็นต้น บริษัทตกลงจะเก็บข้อมูลเหล่านี้ไว้เป็นความลับ และบริษัทอาจใช้ข้อมูลดังกล่าวเพื่อ
-</p>
+      <h2>การเก็บข้อมูลและการใช้ข้อมูลส่วนบุคคล</h2>
+      <p>เมื่อท่านใช้บริการผ่านทางแอพพลิเคชั่น Daydash และลงทะเบียนบัญชีผู้ใช้ ท่านจะต้องให้ข้อมูลส่วนตัวกับทางแอพพลิเคชั่น เช่น ชื่อ ที่อยู่ อีเมล์ เบอร์โทรศัพท์ ข้อมูลบัญชีธนาคาร ข้อมูลบัตรเครดิต รวมถึงข้อมูลลักษณะการใช้งานแอพพลิเคชั่น เป็นต้น บริษัทตกลงจะเก็บข้อมูลเหล่านี้ไว้เป็นความลับ และบริษัทอาจใช้ข้อมูลดังกล่าวเพื่อ
+      </p>
 
-<ul>
-  <li>ประมวลผลและบริหารการใช้งานแอพพลิเคชั่นของท่าน รวมถึงผู้ใช้งานอื่น</li>
-  <li>สื่อสารกับท่านทางโทรศัพท์ อีเมล์ หรือข้อความทางมือถือเกี่ยวกับการใช้งานแอพพลิเคชั่น</li>
-  <li>ตอบคำถามของท่านเกี่ยวกับการให้บริการลูกค้า หรือกระทำการอื่นใดเพื่อตอบคำถามของท่านหรือตอบสนองกิจกรรมในแอพพลิเคชั่นอื่นๆของท่าน</li>
-  <li>สร้างการส่งเสริมการขายเฉพาะกลุ่มโดยการรวมข้อมูลส่วนตัวของท่านกับข้อมูลที่ไม่เป็นข้อมูลส่วนตัวของท่าน เช่นจำนวนครั้งและประเภทการซื้อของท่าน หรือประโยชน์ใดๆ ที่ท่านได้รับผ่านแอพพลิเคชั่น</li>
-  <li>จัดทำข้อเสนอการขายเฉพาะกลุ่มโดยพิจารณาจากข้อมูลการใช้งานแอพพลิเคชั่นส่วนบุคคล</li>
-</ul>
+      <ul>
+        <li>ประมวลผลและบริหารการใช้งานแอพพลิเคชั่นของท่าน รวมถึงผู้ใช้งานอื่น</li>
+        <li>สื่อสารกับท่านทางโทรศัพท์ อีเมล์ หรือข้อความทางมือถือเกี่ยวกับการใช้งานแอพพลิเคชั่น</li>
+        <li>ตอบคำถามของท่านเกี่ยวกับการให้บริการลูกค้า หรือกระทำการอื่นใดเพื่อตอบคำถามของท่านหรือตอบสนองกิจกรรมในแอพพลิเคชั่นอื่นๆของท่าน</li>
+        <li>สร้างการส่งเสริมการขายเฉพาะกลุ่มโดยการรวมข้อมูลส่วนตัวของท่านกับข้อมูลที่ไม่เป็นข้อมูลส่วนตัวของท่าน เช่นจำนวนครั้งและประเภทการซื้อของท่าน หรือประโยชน์ใดๆ ที่ท่านได้รับผ่านแอพพลิเคชั่น</li>
+        <li>จัดทำข้อเสนอการขายเฉพาะกลุ่มโดยพิจารณาจากข้อมูลการใช้งานแอพพลิเคชั่นส่วนบุคคล</li>
+      </ul>
 
-<h2>การเปิดเผยข้อมูลส่วนบุคคลให้แก่บุคคลภายนอก</h2>
-<p>บริษัทจะไม่เปิดเผยข้อมูลส่วนบุคคลใดๆ ของท่านให้แก่บุคคลภายนอก เว้นแต่</p>
+      <h2>การเปิดเผยข้อมูลส่วนบุคคลให้แก่บุคคลภายนอก</h2>
+      <p>บริษัทจะไม่เปิดเผยข้อมูลส่วนบุคคลใดๆ ของท่านให้แก่บุคคลภายนอก เว้นแต่</p>
 
-<ul>
-  <li>ได้รับความยินยอมจากท่าน</li>
-  <li>เป็นการเปิดเผยให้กับผู้จัดอีเว้นท์ หรือผู้จัดกิจกรรมต่างๆ ทั้งนี้ เฉพาะข้อมูลส่วนบุคคลที่เกี่ยวข้องกับบริการที่เกี่ยวข้อง</li>
-  <li>เป็นการเปิดเผยให้กับบริการอื่นซึ่งสนับสนุนการใช้งานแอพพลิเคชั่น เช่น ผู้ประมวลบัตรเครดิต ผู้ให้บริการด้านการชำระเงิน หรือ ผู้ให้บริการอีเมล์ เป็นต้น</li>
-  <li>ข้อมูลบางส่วนอาจเปิดเผย เมื่อมีคำร้องขอโดยชอบด้วยกฎหมาย จากหน่วยงานทางกฎหมาย หรือเพื่อปกป้องสิทธิ ทรัพย์สิน และความปลอดภัยของบริษัท พนักงาน ตัวแทน และผู้ใช้งานแอพพลิเคชั่นท่านอื่น เป็นต้น</li>
-  <li>กรณีมีการโอนกิจการ ควบรวมกิจการ การขายสินทรัพย์ หรือการกู้ยืมเงิน บริษัทอาจต้องเปิดเผยข้อมูลบางส่วนให้กับผู้ที่เกี่ยวข้องในการทำธุรกรรมดังกล่าวทราบ</li>
-</ul>
+      <ul>
+        <li>ได้รับความยินยอมจากท่าน</li>
+        <li>เป็นการเปิดเผยให้กับผู้จัดอีเว้นท์ หรือผู้จัดกิจกรรมต่างๆ ทั้งนี้ เฉพาะข้อมูลส่วนบุคคลที่เกี่ยวข้องกับบริการที่เกี่ยวข้อง</li>
+        <li>เป็นการเปิดเผยให้กับบริการอื่นซึ่งสนับสนุนการใช้งานแอพพลิเคชั่น เช่น ผู้ประมวลบัตรเครดิต ผู้ให้บริการด้านการชำระเงิน หรือ ผู้ให้บริการอีเมล์ เป็นต้น</li>
+        <li>ข้อมูลบางส่วนอาจเปิดเผย เมื่อมีคำร้องขอโดยชอบด้วยกฎหมาย จากหน่วยงานทางกฎหมาย หรือเพื่อปกป้องสิทธิ ทรัพย์สิน และความปลอดภัยของบริษัท พนักงาน ตัวแทน และผู้ใช้งานแอพพลิเคชั่นท่านอื่น เป็นต้น</li>
+        <li>กรณีมีการโอนกิจการ ควบรวมกิจการ การขายสินทรัพย์ หรือการกู้ยืมเงิน บริษัทอาจต้องเปิดเผยข้อมูลบางส่วนให้กับผู้ที่เกี่ยวข้องในการทำธุรกรรมดังกล่าวทราบ</li>
+      </ul>
 
-<h2>การแก้ไขนโยบายความปลอดภัยและข้อปฏิเสธความรับผิดชอบ</h2>
-<p>บริษัทขอสงวนสิทธิในการเปลี่ยนแปลงนโยบายความเป็นส่วนตัวและข้อปฏิเสธความรับผิดชอบได้ทุกเมื่อ เนื้อหาทั้งหมดในหน้าแอพพลิเคชั่นนี้เป็นเนื้อหาที่ปรับปรุงล่าสุด ทางบริษัทจะแจ้งข้อมูลใหม่ให้ท่านทราบเมื่อมีการปรับปรุงข้อมูลเพื่อท่านจะได้ทราบถึงวิธีการป้องกันข้อมูล ส่วนตัวของลูกค้า</p>
+      <h2>การแก้ไขนโยบายความปลอดภัยและข้อปฏิเสธความรับผิดชอบ</h2>
+      <p>บริษัทขอสงวนสิทธิในการเปลี่ยนแปลงนโยบายความเป็นส่วนตัวและข้อปฏิเสธความรับผิดชอบได้ทุกเมื่อ เนื้อหาทั้งหมดในหน้าแอพพลิเคชั่นนี้เป็นเนื้อหาที่ปรับปรุงล่าสุด ทางบริษัทจะแจ้งข้อมูลใหม่ให้ท่านทราบเมื่อมีการปรับปรุงข้อมูลเพื่อท่านจะได้ทราบถึงวิธีการป้องกันข้อมูล ส่วนตัวของลูกค้า</p>
 
-<h2>การคุ้มครองความปลอดภัยในการเข้าถึงข้อมูลส่วนบุคคล</h2>
-<p>บริษัทมีการดำเนินการตามสมควรในการรักษาความปลอดภัยด้านกายภาพ เทคนิค และการจัดการเพื่อป้องกันความสูญเสีย การใช้งานอันไม่สมควร การเข้าถึงข้อมูลโดยไม่ได้รับอนุญาต การเปิดเผยหรือปรับเปลี่ยนข้อมูลส่วนบุคคล อย่างไรก็ตาม</p>
-<p>บริษัทขอสงวนความรับผิดในการคุ้มครองความปลอดภัยดังกล่าว เนื่องจากไม่มีระบบหรือการส่งข้อมูลใดทางเครือข่ายสาธารณะใดที่จะสามารถรับประกันความปลอดภัยได้โดยสมบูรณ์</p>
+      <h2>การคุ้มครองความปลอดภัยในการเข้าถึงข้อมูลส่วนบุคคล</h2>
+      <p>บริษัทมีการดำเนินการตามสมควรในการรักษาความปลอดภัยด้านกายภาพ เทคนิค และการจัดการเพื่อป้องกันความสูญเสีย การใช้งานอันไม่สมควร การเข้าถึงข้อมูลโดยไม่ได้รับอนุญาต การเปิดเผยหรือปรับเปลี่ยนข้อมูลส่วนบุคคล อย่างไรก็ตาม</p>
+      <p>บริษัทขอสงวนความรับผิดในการคุ้มครองความปลอดภัยดังกล่าว เนื่องจากไม่มีระบบหรือการส่งข้อมูลใดทางเครือข่ายสาธารณะใดที่จะสามารถรับประกันความปลอดภัยได้โดยสมบูรณ์</p>
+    </div>
+  </div>
+</div>
