--- a/app/views/client/profile/orders.html.erb
+++ b/app/views/client/profile/orders.html.erb
@@ -47,7 +47,7 @@
                   </div>
                 </div>
               </div>
-            <% end %>
+            <% end if @has_tickets %>
           </div>
         </div>
       </div>
