--- a/app/views/client/profile/orders.html.erb
+++ b/app/views/client/profile/orders.html.erb
@@ -28,7 +28,7 @@
                         <%= payment.event.title %>
                       <% end %>
                     </h4>
-                    <div class="meta date"><%= payment.tickets.first.section.to_event_human %></div>
+                    <div class="meta date"><%= payment.event.up_time %></div>
                     <div class="meta location"><%= payment.event.location_name %></div>
                   </div>
                   <div class="info-footer">
