--- a/app/views/users/shared/_social.html.erb
+++ b/app/views/users/shared/_social.html.erb
@@ -2,8 +2,8 @@
 <style>
   .facebook-social {
     border-radius: 50px;
-    background: #000;
-    color: #fff;
+    background: #3B5998;
+    color: #fff !important;
     padding: 10px 20px;
     display: inherit;
     text-align: center;
