--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -2,14 +2,14 @@
 <div class="section" id="auth-section">
   <div class="container">
     <div class="row">
-      <div class="col-sm-6">
-        <p class="text-xs-center">Sign Up</p>
-
+      <div class="col-md-offset-3 col-md-6 col-sm-12">
+        <h2>Sign Up</h2>
         <br>
+        <p>
           <center>
             <%= render "users/shared/social" %>
           </center>
-        <br>
+        </p>
 
         <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
           <%= devise_error_messages! %>
@@ -33,7 +33,7 @@
           </div>
 
           <div class="form-group">
-            <%= f.submit "Sign up", class: 'btn btn-block btn-primary' %>
+            <button class="btn btn-daydash btn-daydash-green-2 btn-block" type="submit">Sign up</button>
           </div>
 
           <div class="form-group">
