--- a/app/assets/stylesheets/client/events.sass
+++ b/app/assets/stylesheets/client/events.sass
@@ -51,6 +51,10 @@
   src: font-url('Athiti/Athiti-Light.ttf')
   font-weight: 200
 
+#error_explanation
+  font-size: 16px
+  h2
+    font-size: 20px
 
 html, body
   height: 100%
