--- a/app/views/greetings/terms.html.erb
+++ b/app/views/greetings/terms.html.erb
@@ -1,7 +1,9 @@
 <div class="container">
   <div class="row">
     <div class="col-sm-12">
-      <h1>Terms of Service</h1>
+      <% unless mobile_device? %>
+        <h1>Terms of Service</h1>
+      <% end %>
       <h2>ข้อตกลงการใช้บริการแอพพลิเคชั่น Daydash</h2>
       <p>ข้อกำหนดและเงื่อนไขทั้งหมดในเอกสารฉบับนี้ใช้บังคับสำหรับการที่ท่านเข้าใช้แอพพลิเคชั่นทางโทรศัพท์มือถือและเว็บไซต์ ของ Daydash ซึ่งรวมถึงเนื้อหา การใช้เงิน และการให้บริการทั้งหมดบน Daydash Mobile App (“แอพ”)
       การใช้แอพ  สร้างบัญชีผู้ใช้งาน หรือคลิกยอมรับข้อตกลงการใช้งานของเรา จะถือว่าท่านยอมรับที่จะปฏิบัติตาม และอยู่ภายใต้ข้อตกลง รวมถึงยอมรับนโยบายการเป็นส่วนตัวที่เรากำหนด ท่านจะไม่สามารถใช้บริการแอพพลิเคชั่นของเราได้ หากท่านไม่เห็นด้วยกับข้อตกลง หรือนโยบายความเป็นส่วนตัวดังกล่าว
