--- a/app/views/greetings/policy.html.erb
+++ b/app/views/greetings/policy.html.erb
@@ -1,7 +1,9 @@
 <div class="container">
   <div class="row">
     <div class="col-sm-12">
-      <h1>นโยบายความเป็นส่วนตัวของ Daydash</h1>
+      <% unless mobile_device? %>
+        <h1>นโยบายความเป็นส่วนตัวของ Daydash</h1>
+      <% end %>
       <p>แอพพลิเคชั่น Daydash (ทั้งทางเว็บไซต์ และผ่านทาง mobile) ตระหนักถึงความปลอดภัยของข้อมูลส่วนบุคคลและจะรักษาข้อมูลที่ได้รับจากท่านไว้อย่างเป็นความลับและ ปลอดภัยโดยใช้นโยบายความเป็นส่วนตัวเพื่อป้องกันความเสียหายที่อาจเกิดขึ้นกับท่าน บริษัทจึงมีนโยบายความเป็นส่วนตัวเพื่อป้องกันความปลอดภัยของข้อมูลส่วนตัวของท่านดังนี้</p>
 
       <h2>การเก็บข้อมูลและการใช้ข้อมูลส่วนบุคคล</h2>
