--- a/app/views/layouts/greetings.html.erb
+++ b/app/views/layouts/greetings.html.erb
@@ -14,6 +14,14 @@
       body {
         font-family: Sans-Serif;
       }
+      h1, h2 {
+        font-size: 14px;
+        font-weight: bold;
+      }
+
+      ul {
+        padding-left: 20px;
+      }
     </style>
   </head>
   <body>
