--- a/app/views/client/events/show.html.erb
+++ b/app/views/client/events/show.html.erb
@@ -1,8 +1,8 @@
 
 <script>$('body').attr('id', 'event-page');</script>
 <div class="section" id="cover-section">
-  <% if @event.galleries.present? %>
-    <div class="cover" style="background-image: url(<%= @event.galleries.first.try(:media, :thumb) %>);"></div>
+  <% if @event.event_pictures.present? %>
+    <div class="cover" style="background-image: url(<%= @event.event_pictures.first.try(:media, :thumb) %>);"></div>
   <% end %>
   <div class="info">
     <div class="container">
@@ -24,7 +24,7 @@
             <%= simple_format(@event.description) %>
         </div>
         <div class="gallery row">
-          <% @event.galleries.each do |image| %>
+          <% @event.event_pictures.each do |image| %>
           <div class="col col-xs-6 col-md-4">
             <a class="image" href="#" style="background-image: url(<%= image.try(:media, :thumb) %>);"></a>
           </div>
@@ -64,8 +64,8 @@
         <div class="col-sm-6 col-md-4">
           <div class="event card">
             <%= link_to client_event_path(event.to_url) do %>
-              <% if event.galleries.present? %>
-                <div class="cover" style="background-image: url(<%= event.galleries.first.try(:media, :thumb) %>);"></div>
+              <% if event.event_pictures.present? %>
+                <div class="cover" style="background-image: url(<%= event.event_pictures.first.try(:media, :thumb) %>);"></div>
               <% else %>
                 <div class="cover"></div>
               <% end %>
