--- a/app/views/organizer/events/edit.html.erb
+++ b/app/views/organizer/events/edit.html.erb
@@ -58,7 +58,7 @@
           <div class="col-xs-12 col-md-6">
             <div class="form-group">
               <label>Images</label>
-              <input class="form-control" type="file" name="galleries[]" multiple />
+              <input class="form-control" type="file" name="event_pictures[]" multiple />
             </div>
             <div class="image-list sortable row">
               <% @images.each do |image| %>
