--- a/app/views/admin/events/index.html.erb
+++ b/app/views/admin/events/index.html.erb
@@ -24,8 +24,8 @@
                 <% @events.each do |event| %>
                   <tr>
                     <td>
-                      <% if event.galleries.present? %>
-                        <%= link_to (image_tag event.galleries.first.try(:media, :thumb), width: '100'), edit_admin_event_path(event.id), target: '_self' %>
+                      <% if event.event_pictures.present? %>
+                        <%= link_to (image_tag event.event_pictures.first.try(:media, :thumb), width: '100'), edit_admin_event_path(event.id), target: '_self' %>
                       <% else %>
                         NULL
                       <% end %>
