--- a/app/views/client/events/payment-bank-transfer.html.erb
+++ b/app/views/client/events/payment-bank-transfer.html.erb
@@ -32,8 +32,8 @@
         <div class="col-sm-6 col-md-4">
           <div class="event card">
             <%= link_to client_event_path(event.to_url) do %>
-              <% if event.galleries.present? %>
-                <div class="cover" style="background-image: url(<%= event.galleries.first.try(:media, :thumb) %>);"></div>
+              <% if event.event_pictures.present? %>
+                <div class="cover" style="background-image: url(<%= event.event_pictures.first.try(:media, :thumb) %>);"></div>
               <% else %>
                 <div class="cover"></div>
               <% end %>
