--- a/app/views/layouts/parts/_carousel_index.html.erb
+++ b/app/views/layouts/parts/_carousel_index.html.erb
@@ -96,7 +96,7 @@
            <div style="position:absolute;display:block;background:url('img/loading.gif') no-repeat center center;top:0px;left:0px;width:100%;height:100%;"></div>
        </div>
        <div data-u="slides" style="cursor: default; position: relative; top: 0px; left: 0px; width: 1300px; height: 500px; overflow: hidden;">
-         <% @galleries.each do |gallery| %>
+         <% @event_pictures.each do |gallery| %>
          <div data-p="225.00" style="display: none;">
            <%= image_tag gallery.try(:media, :full), 'data-u': 'images' %>
          </div>
