--- a/app/views/organizer/events/new.html.erb
+++ b/app/views/organizer/events/new.html.erb
@@ -53,7 +53,7 @@
           <div class="col-xs-12 col-md-6">
             <div class="form-group">
               <label>Images</label>
-              <input class="form-control" type="file" name="galleries[]" multiple />
+              <input class="form-control" type="file" name="event_pictures[]" multiple />
             </div>
           </div>
         </div>
