--- a/app/views/client/events/express.html.erb
+++ b/app/views/client/events/express.html.erb
@@ -20,27 +20,27 @@
                 <h4 class="title text-left">
                   <%= link_to @event.title, client_event_path(@event.to_url) %>
                 </h4>
-                <div class="meta date"><i class="icon icon-xs icon-calendar"></i> <%= @section.to_event_human %></div>
+                <div class="meta date"><i class="icon icon-xs icon-calendar"></i> <%= @event.to_uptime %></div>
                 <div class="meta location"><i class="icon icon-xs icon-map-pin"></i> <%= @event.location_name %></div>
               </div>
             </div>
             <div class="ticket-list">
               <div class="list-body">
                 <% @event.sections.each do |section| %>
-                <% next if @tickets[:"#{section.id}"].nil? %>
+                <% next if @tickets["#{section.id}"].nil? %>
                 <div class="ticket row">
                   <div class="col-xs-8 ticket-title">
-                    <%= section.available %> x ฿ <%= section.price %> <%= section.title %>
+                    <%= section.title %> <%= @tickets["#{section.id}"]["quantity"] %> x ฿ <%= section.price %>
                   </div>
                   <div class="col-xs-4 ticket-price">
-                  ฿ <%= section.price * @tickets[:"#{section.id}"][:quantity] %>
+                  ฿ <%= section.price * @tickets["#{section.id}"]["quantity"] %>
                   </div>
                 </div>
                 <% end %>
               </div>
               <div class="row list-footer">
                 <div class="col-xs-12">
-                  Total: ฿ <%= @total %>
+                  Total: ฿ <%= @tickets["total"] %>
                 </div>
               </div>
             </div>
@@ -205,7 +205,7 @@
                     <div class="form-section-footer">
                       <div>
                         <label>
-                          
+
                           By submitting, you agree to <a data-toggle="modal" data-target="#policy-modal" href="#policy-modal">Payment Policy</a>
                         </label>
                       </div>
@@ -269,7 +269,7 @@ function init_card_validate() {
       expiryInput: 'input[name=card_expiry]',
       cvcInput: 'input[name=card_cvc]',
       nameInput: 'input[name=card_name]'
-    },    
+    },
   });
 
 }
@@ -283,11 +283,11 @@ function init_form_validate() {
     },
     unhighlight: function(element) {
         $(element).closest('.form-group').removeClass('has-error');
-    },    
+    },
     submitHandler: function() {
 
       var form = $('#checkout');
-      
+
       if(form.find("[name=payment_method]").val() == 'credit_card') {
         omise_submit(form);
         return false;
@@ -334,7 +334,7 @@ function omise_submit(form) {
 
           if(response.code == 'invalid_card') throw 'Your credit card information does not correct.';
           else throw response.message;
-          
+
         } else {
           form.find("[name=omise_token]").val(response.id);
           form.find("[name=payment_method]").val(form.find("[data-btn=payment-method]").val());
