--- a/app/views/client/events/show.html.erb
+++ b/app/views/client/events/show.html.erb
@@ -86,7 +86,7 @@
 
 <div class="modal fade" tabindex="-1" role="dialog" id="ticket-list-modal">
   <div class="modal-dialog" role="document">
-    <%= form_tag client_event_express_path(@event.to_url), method: :get, id: :payment do  %>
+    <%= form_tag client_event_selection_path(@event.to_url), method: :post, id: :payment do  %>
       <div class="modal-content">
         <div class="modal-header">
           <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
