--- a/app/views/client/events/express.html.erb
+++ b/app/views/client/events/express.html.erb
@@ -209,7 +209,7 @@
                           By submitting, you agree to <a data-toggle="modal" data-target="#policy-modal" href="#policy-modal">Payment Policy</a>
                         </label>
                       </div>
-                      <button class="btn btn-submit btn-block btn-lg btn-daydash btn-daydash-green-1" data-btn="payment-method" value="credit_card">PAY NOW - ฿ <%= @total %></button>
+                      <button class="btn btn-submit btn-block btn-lg btn-daydash btn-daydash-green-1" data-btn="payment-method" value="credit_card">PAY NOW - ฿ <%= @tickets["total"] %></button>
                     </div>
                   </div>
                   <div role="tabpanel" class="tab-pane" id="payment-method-bank-panel">
