--- a/app/views/client/events/show.html.erb
+++ b/app/views/client/events/show.html.erb
@@ -16,7 +16,7 @@
       <div class="col-xs-12 col-md-7">
         <div class="row">
           <div class="col-xs-12">
-            <div class="meta date"><i class="icon icon-xs icon-calendar"></i> <%= @section.to_event_human %></div>
+            <div class="meta date"><i class="icon icon-xs icon-calendar"></i> <%= @event.to_uptime %></div>
             <div class="meta location"><i class="icon icon-xs icon-map-pin"></i> <%= @event.location_name %></div>
           </div>
         </div>
