--- a/app/views/client/profile/tickets.html.erb
+++ b/app/views/client/profile/tickets.html.erb
@@ -35,7 +35,7 @@
                     <div class="row">
                       <div class="col-xs-12 col-md-7">
                         <span class="ticket-price">฿ <%= ticket.event.first_section.price %></span>
-                        <span class="purchase-date">purchased on <%= ticket.payment.purchased_status %></span>
+                        <span class="purchase-date">purchased on <%#= ticket.payment.purchased_status %></span>
                       </div>
                     </div>
                   </div>
