--- a/app/views/client/profile/orders.html.erb
+++ b/app/views/client/profile/orders.html.erb
@@ -35,7 +35,7 @@
                     <div class="row">
                       <div class="col-xs-12 col-md-7">
                         <span class="ticket-price">฿ <%= payment.event.first_section.price %></span>
-                        <span class="purchase-date">purchased on <%= payment.purchased_status %></span>
+                        <span class="purchase-date">purchased on <%#= payment.purchased_status %></span>
                       </div>
                       <div class="col-xs-12 col-md-5">
                         <ul class="list-inline list-action-nav pull-right">
