--- a/app/views/client/profile/orders.html.erb
+++ b/app/views/client/profile/orders.html.erb
@@ -1,55 +1,170 @@
-<script>$('body').attr('id', 'profile-ticket-list-page');</script>
+<script>$('body').attr('id', 'profile-order-list-page');</script>
 <script>$('body').addClass('profile-page');</script>
+
+<%= render partial: "client/profile/parts/profile-nav" %>
+<script>$('#profile-nav #menu-my-orders').addClass('active');</script>
 
 <div class="section">
   <div class="container">
-    <%= render partial: "client/profile/parts/profile-nav" %>
-    <script>$('#profile-nav #menu-my-orders').addClass('active');</script>
 
     <div class="row">
-      <div class="col-xs-12 col-md-9">
-        <div class="ticket-list">
-          <div class="list-header">
-            <h1>Orders</h1>
-            <ul class="list-inline">
-              <li><a href="#">Live (<%= @payments.count %>)</a></li>
-              <li>|</li>
-              <li><a href="#">Past (0)</a></li>
-            </ul>
-          </div>
+      <div class="col-xs-12">
+        <div class="order-list">
           <div class="list-body">
             <% @payments.each do |payment| %>
-              <div class="ticket card-side-cover">
-                <a class="cover" style="background-image: url(<%= payment.event.galleries.first.try(:media, :thumb) %>);" href="#"></a>
-                <div class="info">
-                  <div class="info-body">
-                    <h4 class="title">
-                      <%= link_to client_profile_ticket_path(current_user.id, payment.id) do %>
-                        <%= payment.event.title %>
-                      <% end %>
-                    </h4>
-                    <div class="meta date"><%= payment.event.up_time %></div>
-                    <div class="meta location"><%= payment.event.location_name %></div>
-                  </div>
-                  <div class="info-footer">
-                    <div class="row">
-                      <div class="col-xs-12 col-md-7">
-                        <span class="ticket-price">฿ <%= payment.event.first_section.price %></span>
-                        <span class="purchase-date">purchased on <%= payment.purchased_status %></span>
-                      </div>
-                      <div class="col-xs-12 col-md-5">
-                        <ul class="list-inline list-action-nav pull-right">
-                          <li><%= link_to "View Ticket", client_profile_ticket_path(current_user.id, payment.id) %></li>
-                          <li><a href="<%= client_event_path(payment.event.id) %>">View Event</a></li>
-                        </ul>
+            <div class="order order-1">
+              <div class="order-header row">
+                <div class="col-xs-12 col-md-6 left">
+                  <strong>เลขที่ออร์เดอร์:</strong> <%= payment.code %>
+                </div>
+                <div class="col-xs-12 col-md-6 right">
+                  สั่งซื้อเมื่อ <%= payment.created_at.try(:strftime, "%A %d %B, %H:%M") %>
+                </div>
+              </div>
+              <div class="order-body row">
+                <div class="col-xs-12 col-md-6 left">
+                    <a class="cover" style="background-image: url(<%= payment.event.galleries.first.try(:media, :thumb) %>);" href="<%= client_event_path(payment.event.id) %>"></a>
+                    <h4 class="title"><a href="<%= client_event_path(payment.event.id) %>"><%= payment.event.title %></a></h4>
+
+                    <div class="meta location"><i class="icon icon-xs icon-map-pin"></i> <%= payment.event.location_name %></div>
+                </div>
+                <div class="col-xs-12 col-md-6 right">
+                  <div class="info">
+                    <div class="info-header">
+                      <table class="table">
+                        <tr>
+                          <td width="150">ราคารวม</td>
+                          <td>฿ <%= payment.amount %></td>
+                        </tr>
+                        <tr>
+                          <td>วิธีการชำระเงิน</td>
+                          <td><%= payment.provider %></td>
+                        </tr>
+                        <tr>
+                          <td>สถานะการชำระเงิน</td>
+                          <td><%= payment.status %></td>
+                        </tr>
+                        <tr>
+                          <td>รหัสชำระเงิน</td>
+                          <td><%= payment.code %></td>
+                        </tr>
+                      </table>
+                    </div>
+                    <div class="info-body">
+                      <table class="table ticket-list">
+                        <% payment.tickets.each do |ticket| %>
+                        <tr class="ticket">
+                          <td class="ticket-title" width="150"><%= ticket.section.title %></td>
+                          <td class="ticket-code"><%= ticket.code %></td>
+                          <td class="ticket-price" width="100" align="right">฿ 500</td>
+                        </tr>
+                        <% end %>
+                        <tr class="total">
+                          <td></td>
+                          <td><strong>TOTAL</strong></td>
+                          <td align="right"><strong>฿ <%= payment.amount %></strong></td>
+                        </tr>
+                      </table>
+                    </div>
+                    <div class="info-footer">
+                      <div class="row">
+                        <div class="col-xs-6"><a class="btn btn-block btn-daydash btn-daydash-inverse" data-toggle="modal" href="#payment-modal">วิธีการชำระเงิน</a></div>
+                        <div class="col-xs-6"><a class="btn btn-block btn-daydash btn-daydash-inverse" data-toggle="modal" href="#payment-modal">แจ้งชำระเงิน</a></div>
                       </div>
                     </div>
                   </div>
                 </div>
               </div>
+            </div>
             <% end if @has_tickets %>
           </div>
         </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!-- Modal -->
+<div class="modal fade" id="payment-modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-body">
+        <table border="0" cellpadding="0" cellspacing="0" style="max-width:100%; min-width:100%;" width="100%" class="mcnTextContentContainer">
+          <tbody>
+            <tr>
+              <td valign="top" class="mcnTextContent" style="padding-top:0; padding-right:18px; padding-bottom:9px; padding-left:18px;">
+                <p style="font-size: 24px; font-weight: 200; padding-top: 15px; padding-bottom: 15px; border-bottom: 1px solid black;">วิธีการชำระเงิน</p>
+                <p style="font-weight: 200;">
+                  1. เลือกโอนยอดเงิน 1,300 บาท ผ่านธนาคารที่คุณสะดวก
+                </p>
+                <table width="100%">
+                  <tbody>
+                    <tr>
+                      <td width="50%" style="vertical-align: top;">
+                        <table>
+                          <tr>
+                            <td width="60" valign="top">
+                              <%= image_tag "#{App.domain}/src/images/email/order/kbank-logo.png", width: "50"  %>
+                            </td>
+                            <td valign="top">
+                              <p style="font-size: 13px; font-weight: 200; margin-top: 0px;">
+                                ธนาคารกสิกรไทย สาขาเอกมัย<br />
+                                บัญชีออมทรัพย์ <strong>001-3-42202-8</strong>​<br />
+                                ชื่อบัญชี นางสาวลินดา ไกรวณิช
+                              </p>
+                            </td>
+                          </tr>
+                        </table>
+                      </td>
+                      <td width="50%" style="vertical-align: top;">
+                        <table>
+                          <tr>
+                            <td width="60" valign="top">
+                              <%= image_tag "#{App.domain}/src/images/email/order/scb-logo.png", width: "50"  %>
+                            </td>
+                            <td valign="top">
+                              <p style="font-size: 13px; font-weight: 200; margin-top: 0px;">
+                                ธนาคารไทยพาณิชย์<br />
+                                สาขาเอกมัย พาวเวอร์ เซ็นเตอร์<br />
+                                บัญชีออมทรัพย์ <strong>250-217556-5</strong>​<br />
+                                ชื่อบัญชี นางสาวลินดา ไกรวณิช
+                              </p>
+                            </td>
+                          </tr>
+                        </table>
+                      </td>
+                    </tr>
+                  </tbody>
+                </table>
+                <p style="font-weight: 200; padding-bottom: 30px;">
+                  2. แจ้งยืนยันการชำระเงินโดยส่งรูปถ่ายหลักฐานการโอนเงิน<br />
+                  พร้อมรหัสการโอนเงิน ผ่านทาง: Line @daydash (มี @ ข้างหน้า)
+                </p>
+                <p style="font-weight: 200; padding-bottom: 30px;">
+                  3. เราจะส่งตั๋วให้คุณทางอีเมลเมื่อเราได้รับแจ้งยืนยันการชำระเงินแล้วภายใน 60 นาที :)
+                </p>
+                <table width="100%">
+                  <tr>
+                    <td align="center" style="color: red;">
+                      <strong>*** กรุณาทำการชำระเงินภายใน 3 ชั่วโมง นับจากการสั่งซื้อ ***</strong><br />
+                      (ชำระภายใน วันที่ 25 กันยายน 2016 เวลา 11:03 PM)
+                    </td>
+                  </tr>
+                </table>
+                <br />
+                <br />
+                <table width="100%">
+                  <tr>
+                    <td align="center" style="background: #DFFFFB; padding: 15px; font-size: 14px; font-weight: 200;">
+                      หากคุณพบปัญหาหรือมีคำถาม ต้องการความช่วยเหลือ สามารถติดต่อเราได้ที่<br />
+                      Tel. 080-456-9465  หรือ Line: @daydash
+                    </td>
+                  </tr>
+                </table>
+              </td>
+            </tr>
+          </tbody>
+        </table>
       </div>
     </div>
   </div>
